--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,8 @@
-lib
+/lib/
 index.ts
-examples
+/examples/
 jest.config.js
 tsconfig.json
-dist/
-.husky/
-coverage/
-types/
+/dist/
+/.husky/
+/coverage/
